--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-SUP
-Manasa Jagadeesh
+<!DOCTYPE html>
+<html>
+	<head>
+	</head>
+	<body>
+		<h1>Hello</h1>
+		<a href="projects.html">Click</a>
+	</body>
+</html>
