--- a/index.html
+++ b/index.html
@@ -1,9 +1,121 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+			body
+			{
+				background-image:url("/../HTML/Project/Images/flower.png");
+				
+				font-size: 16px;
+				font-family: Verdana;
+				margin: 0 !important;
+				padding: 0 !important;
+			}
+			table 
+			{
+				margin-left:30px;
+				border-collapse: collapse;
+				width: 96%;
+				background-color:rgba(250,250,250,0.7);
+				float:center;
+			}
+			td
+			{
+				padding: 16px;
+				width:48%;
+				text-align: center;
+				border-bottom: 1px solid #ddd;
+				float:center;
+			}
+			span
+			{
+				text-align: center;
+				width: 98%;
+			}
+			input[type=text],input[type=date],input[type=email]
+			{
+				width:100%;
+				float:center;
+				text-align:center;
+			}
+			input[placeholder]
+			{
+				text-align:center;
+				font-size:14px;
+			}
+			.box{display:none;}
+			button,#sub
+			{
+				width:100%;
+				background-color: lightpink; 
+				border: none;
+				color: white;
+				padding: 8px 8px;
+				text-align: center;
+				text-decoration: none;
+				display: inline-block;
+				margin: 4px 2px;
+				cursor: pointer;
+			}
+			.img-circle 
+			{
+				border-radius: 100%;
+				background-image:url("/../HTML/Project/Images/contacts-257.png");
+				background-size: 280px 280px;
+				width:280px;
+				height:280px;
+				color:white;
+				font-size:30px;
+				
+			}
+			div.return
+			{ 	
+				/*height:30px;
+				width:30px;
+				position:absolute;
+				left:20px;
+				top:20px;*/
+			}
+			.img-circle:hover{
+				opacity:0.8;
+			}
+			ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+			background-color:rgba(250, 0, 0, 0.06) ;
+			height:40px;
+			}
+			li {
+				float: right;
+				margin-right:15px;
+				margin-left:15px;
+			}
+			li a,li{
+				display: block;
+				color: #efe;
+				text-align: center;
+				text-decoration: none;
+				font-family:"Times new roman"
+				text-decoration:none;
+				font-family:bromello;
+				vertical-align:middle;
+				line-height:40px;
+				font-size:120%;
+				font-family:"calibri";
+				text-shadow:1px 1px 1px black;
+			}
+			li a:hover {
+				background-color:rgba(250, 0, 0, 0.2) ;
+			}
+		</style>
 	</head>
 	<body>
-		<h1>Hello</h1>
-		<a href="projects.html">Click</a>
+		<ul>
+			<li><a href="Homepage_n.php">Logout</a></li>
+			<li><a href="Dash.php">Home</a></li>
+			<li style="float:left;">Profile</li>
+		</ul>
 	</body>
 </html>
