--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 					<img src="pp.jpeg" alt="Stanley">
 					<h1>About Manasa</h1>
 					<p>I'm a third year undergraduate student at PES University, Bangalore. My major is Computer Science & Engineering.</p>
-					<p>You can find my CV <a href="manasa_resume.pdf">here.</a> I love connecting with peers, and am open to collaborating on new and intersting ideas, drop me a message! .</p>
+					<p>You can find my CV <a href="manasa_resume.pdf">here.</a> I love connecting with peers, and am open to collaborating on new and interesting ideas, drop me a message! .</p>
 				
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
