--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 					<img src="pp.jpeg" alt="Stanley">
 					<h1>About Manasa</h1>
 					<p>I'm a third year undergraduate student at PES University, Bangalore. My major is Computer Science & Engineering.</p>
-					<p>You can find my CV <a href="manasa_resume.pdf">here.</a> I love connecting with peers, and am open to collaborating on new and interesting ideas, drop me a message! .</p>
+					<p>You can find my resume <a href="res.pdf">here.</a> I love connecting with peers, and am open to collaborating on new and interesting ideas, drop me a message! </p>
 				
 				</div><!-- /col-lg-8 -->
 			</div><!-- /row -->
@@ -78,7 +78,7 @@
 	
 	
 	<!-- +++++ Information Section +++++ -->
-	
+	<!--
 	<div class="container pt">
 		<div class="row mt centered">	
 			<div class="col-lg-3">
@@ -100,13 +100,13 @@
 				<span class="glyphicon glyphicon-globe"></span>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 			</div>
-		</div><!-- /row -->
+		</div>
 		
 		<div class="row mt">
 			<div class="col-lg-6">
 				<h4>THE THINKING</h4>
 				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-			</div><!-- /colg-lg-6 -->
+			</div><!-- /colg-lg-6 
 			
 			<div class="col-lg-6">
 				<h4>THE SKILLS</h4>
@@ -131,8 +131,8 @@
 					</div>
 				</div>
 
-			</div><!-- /col-lg-6 -->
-		</div><!-- /row -->
+			</div><!-- /col-lg-6 
+		</div><!-- /row 
 	</div><!-- /container -->
 	
 	
