--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<div class="col-lg-4">
 					<h4>Contact me</h4>
 					<p>
-						<a href="manasajagadeesh98@gmail.com">Email</a><br/>
+						<a href="mailto:manasajagadeesh98@gmail.com">Email</a><br/>
             <a href="https://www.linkedin.com/in/manasa-jagadeesh">LinkedIn</a><br/>
             <a href="https://www.instagram.com/spockindex">Instagram</a><br/>
             <a href="https://www.facebook.com/manasajagadeesh">Facebook</a>
